@@ -1,6 +1,3 @@
-* rerun configure with the same options in dkms
-* document DKMS
-
 * drop the mmapped jiffies
   * use clock_gettime(CLOCK_MONOTONIC_COARSE) when available,
     it has the HZ resolution and cost about 10ns
