@@ -1,19 +1,6 @@
 # DKMS (Dynamic Kernel Module Support) configuration file
 # for automatical rebuilding and installing of the open-mx
-# module for new kernels.
-#
-# Assuming you want to use Open-MX 1.3.2, you should first
-# unpack open-mx-1.3.2.tar.gz in /usr/src. Then run:
-#   dkms add -m open-mx -v 1.3.2
-#   dkms build -m open-mx -v 1.3.2
-#   dkms install -m open-mx -v 1.3.2
-# You will then be able to load Open-MX for your kernel:
-#   modprobe open-mx
-# To uninstall:
-#   dkms remove -m open-mx -v 1.3.2 --all
-#   rm -rf /usr/src/open-mx-1.3.2
-#
-# See http://www.linuxjournal.com/article/6896 for details.
+# module for new kernels. See the FAQ for details.
 
 # DKMS module name and version
 PACKAGE_NAME="open-mx"
